# public-RTC

./: .gitignore  KEYNOTE_PRESENTATION.md  KEYNOTE_PRESENTATION.pptx  README.md
.github/workflows/: ci.yml  release.yml
Back/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mise.toml
Back/.devcontainer/: devcontainer.json
Back/migrations/: 202601280001_init.sql  202602040001_extras.sql  202603120001_friends.sql  202603120002_status.sql  202603120003_direct_messages.sql  202603120004_direct_messages_edit.sql  202603130001_bans.sql  README.md
Back/src/: DOCS.md  DOCS.mdr  README.md  lib.rs  main.rs  state.rs
Back/src/api/: README.md  README.mdr  auth.rs  channels.rs  dm.rs  friends.rs  guards.rs  messages.rs  mod.rs  servers.rs  users.rs
Back/src/auth/: README.md  mod.rs
Back/src/db/: README.md  README.mdr  bans.rs  channels.rs  direct_messages.rs  friends.rs  invites.rs  members.rs  messages.rs  mod.rs  reactions.rs  servers.rs  tokens.rs  users.rs
Back/src/models/: README.md  mod.rs
Back/src/utils/: README.md  config.rs  error.rs  mod.rs  validation.rs
Back/src/ws/: README.md  README.mdr  handler.rs  mod.rs
Back/tests/: README.md  dm_flow.rs  friends_flow.rs  invites_flow.rs  messages_flow.rs  server_flow.rs  tokens_flow.rs  users_flow.rs  ws_integration.rs
Front/: .gitignore  README.md  mise.toml
Front/.devcontainer/: devcontainer.json
Front/app/: .env.local.example  .gitignore  README.md  (+2 more)
presentation/: .~lock.rtc_chat_project.pptx#  rtc_chat_project.pptx
tools/: markdown_to_pptx.py
(+110 files in other folders)
